--- a/package.json
+++ b/package.json
@@ -5,11 +5,23 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "build:css": "postcss styles/tailwind.css -o styles/main.css",
+    "build:watch": "postcss styles/tailwind.css -o styles/main.css --watch",
+    "prod:build": "NODE_ENV=production yarn run build:css && yarn run build"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.4",
+    "bootstrap": "^4.6.0",
     "next": "10.0.6",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-dom": "17.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "styled-components": "^4.3.2",
+    "tailwindcss": "^2.0.3"
   }
 }
