--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "autoprefixer": "^10.2.4",
     "bootstrap": "^4.6.0",
+    "google-map-react": "^2.1.9",
+    "latest": "^0.2.0",
     "next": "10.0.6",
     "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1",
@@ -22,6 +24,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "version": "^0.1.2"
   }
 }
