--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "autoprefixer": "^10.2.4",
     "bootstrap": "^4.6.0",
+    "favicons": "^6.2.1",
     "google-map-react": "^2.1.9",
     "latest": "^0.2.0",
     "next": "10.0.6",
@@ -26,5 +27,9 @@
     "styled-components": "^4.3.2",
     "tailwindcss": "^2.0.3",
     "version": "^0.1.2"
+  },
+  "devDependencies": {
+    "@iconify/icons-mdi": "^1.1.12",
+    "@iconify/react": "^1.1.4"
   }
 }
